RESOLVED FIXED128573
messages.py doesn't handle parameters with more than one level of scope.
https://bugs.webkit.org/show_bug.cgi?id=128573
Summary messages.py doesn't handle parameters with more than one level of scope.
Jeremy Jones
Reported 2014-02-10 19:02:20 PST
messages.py failed if you have a message like: SetVideoLayerID(WebCore::GraphicsLayer::PlatformLayerID videoLayerID) It fails generating a header because there are too many parameters to the sting formatting operator: headers.append('<%s/%s.h>' % tuple(split)) Where split is (WebCore, GraphicsLayer, PlatformLayerID)
Attachments
Patch (1.37 KB, patch)
2014-02-10 19:05 PST, Jeremy Jones
no flags
Patch (9.61 KB, patch)
2014-02-11 11:57 PST, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2014-02-10 19:05:14 PST
Jeremy Jones
Comment 2 2014-02-10 21:33:13 PST
File "/Volumes/Data/Code/WebKit/OpenSource/Source/WebKit2/Scripts/webkit2/messages.py", line 473, in headers_for_type TypeError: not all arguments converted during string formatting headers.append('<%s/%s.h>' % tuple(split))
Simon Fraser (smfr)
Comment 3 2014-02-10 22:01:39 PST
Comment on attachment 223788 [details] Patch You should probably add a test for this. There are tests in the same directory.
Jeremy Jones
Comment 4 2014-02-11 09:13:41 PST
(In reply to comment #3) > (From update of attachment 223788 [details]) > You should probably add a test for this. There are tests in the same directory. Thanks. I'll do that.
Jeremy Jones
Comment 5 2014-02-11 11:57:11 PST
WebKit Commit Bot
Comment 6 2014-02-15 01:22:53 PST
Comment on attachment 223888 [details] Patch Clearing flags on attachment: 223888 Committed r164171: <http://trac.webkit.org/changeset/164171>
WebKit Commit Bot
Comment 7 2014-02-15 01:22:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.