messages.py doesn't handle parameters with more than one level of scope. https://bugs.webkit.org/show_bug.cgi?id=128573

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-02-15
Reviewed by Simon Fraser.

Support .messages.in header include generation for parameter types with more than 1 level of scope.

Add a test case and update expected results.

* Scripts/webkit2/LegacyMessageReceiver-expected.cpp:
(WebKit::WebPage::didReceiveWebPageMessage):
* Scripts/webkit2/LegacyMessages-expected.h:
(Messages::WebPage::SetVideoLayerID::receiverName):
(Messages::WebPage::SetVideoLayerID::name):
(Messages::WebPage::SetVideoLayerID::SetVideoLayerID):
(Messages::WebPage::SetVideoLayerID::arguments):
* Scripts/webkit2/MessageReceiver-expected.cpp:
(WebKit::WebPage::didReceiveMessage):
* Scripts/webkit2/Messages-expected.h:
(Messages::WebPage::SetVideoLayerID::receiverName):
(Messages::WebPage::SetVideoLayerID::name):
(Messages::WebPage::SetVideoLayerID::SetVideoLayerID):
(Messages::WebPage::SetVideoLayerID::arguments):
* Scripts/webkit2/messages.py:
(headers_for_type):
* Scripts/webkit2/messages_unittest.py:
* Scripts/webkit2/test-legacy-messages.in:
* Scripts/webkit2/test-messages.in:

Canonical link: https://commits.webkit.org/146902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164171 268f45cc-cd09-0410-ab3c-d52691b4dbfc